Make sure spacing between list items is correct on wider screens

--- a/src/components/dialog.scss
+++ b/src/components/dialog.scss
@@ -34,7 +34,7 @@
     position: absolute;
     bottom: 0;
     width: 100%;
-    padding: 0 5px;
+    padding: 0;
 
     @include box-sizing(border-box);
 
