--- a/src/components/record-view.scss
+++ b/src/components/record-view.scss
@@ -13,7 +13,7 @@
     height: $row-height;
     line-height: $row-height;
     padding: 0 15px;
-    margin: 5px;
+    margin: 5px 0;
     cursor: pointer;
 
     @include display-box;
